--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-loader": "8.0.4",
     "babel-eslint": "9.0.0",
     "eslint": "5.6.0",
     "eslint-plugin-jest": "^22.1.2",
