--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "classnames": "^2.2.6",
     "firebase": "^5.8.2",
     "node-sass": "^4.11.0",
+    "papaparse": "^4.6.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,8 +33,8 @@
   ],
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "8.0.4",
     "babel-eslint": "9.0.0",
+    "babel-loader": "8.0.4",
     "eslint": "5.6.0",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.11.1",
