--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "firebase": "^5.8.2",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "papaparse": "^4.6.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "uuid": "^3.3.2"
