--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-js-pagination": "^3.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-switch": "^4.0.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
