--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "firebase": "^5.8.2",
     "node-sass": "^4.11.0",
     "papaparse": "^4.6.3",
     "rc-checkbox": "^2.1.6",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
