--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^5.8.2",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
+    "p-iteration": "^1.1.7",
     "papaparse": "^4.6.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
