--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "firebase": "^5.8.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "papaparse": "^4.6.3",
     "react": "^16.8.1",
