--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "firebase": "^5.8.2",
-    "moment": "^2.24.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "p-iteration": "^1.1.7",
     "papaparse": "^4.6.3",
     "react": "^16.8.1",
+    "react-csv": "^1.1.1",
     "react-dom": "^16.8.1",
     "react-js-pagination": "^3.0.2",
     "react-router-dom": "^4.3.1",
